--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+:root {
+  --background-color:rgb(202, 165, 2);
+  --primary-color: solid 1px #000000;
+  --text-color:  #07960e;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -5,8 +11,8 @@
 body {
   margin: 0;
   font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
+  color: rgb(255, 255, 255);
+  background-color: var(--background-color)
 }
 
 nav {
@@ -16,8 +22,8 @@ nav {
   justify-content: center;
   padding: 0.5rem;
   gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
+  border-bottom: var(--primary-color);
+  background-color: #000000;
 }
 
 nav a {
@@ -25,15 +31,15 @@ nav a {
   min-width: 9rem;
   padding: 0.5rem;
   border-radius: 0.2rem;
-  border: solid 1px #aaa;
+  border: solid 1px rgb(0, 75, 6);
   text-align: center;
   text-decoration: none;
-  color: #555;
+  color:  #07960e;
 }
 
 nav a[aria-current='page'] {
   color: #000;
-  background-color: #d4d4d4;
+  background-color: #07960e;
 }
 
 main {
