--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
   --background-image: url(https://t4.ftcdn.net/jpg/16/75/23/73/360_F_1675237350_y9fjh7KTPAmurdd1FR3lYjEQNSnAJqR2.jpg);
-  --background-color: #1a1a1a;
-
+  --background-color: #1a1a1a
+;
   --color-purple: #8a2be2;
   --color-green: #39ff14;
   --color-pink: #ff69b4;
